--- a/src/pages/apostas.astro
+++ b/src/pages/apostas.astro
@@ -172,9 +172,9 @@ changeLanguage("en");
       
       <!-- Contêiner para botões usando grid -->
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Vitória Manchester City', generateOdd('ex1')" class="px-3 py-1 bg-blue-400 text-white rounded">Vitória Manchester City</button>
-        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Empate', generateOdd('ex2')" class="px-3 py-1 bg-gray-300 text-black rounded">Empate</button>
-        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Vitória Aston Villa', generateOdd('ex3')"class="px-3 py-1 bg-pink-900 text-white rounded">Vitória Aston Villa</button>
+        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Vitória Manchester City', generateOdd('ex1')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-blue-400 text-white rounded">Vitória Manchester City</button>
+        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Empate', generateOdd('ex2')" class="px-3 py-1 bg-gray-300 text-black rounded hover:bg-gray-800 hover:text-white">Empate</button>
+        <button @click="boletimMessage = 'Manchester City vs Aston Villa', boletimMessage2 = 'Vitória Aston Villa', generateOdd('ex3')"class="px-3 py-1 bg-pink-900 hover:bg-gray-800 hover:text-white text-white rounded">Vitória Aston Villa</button>
       </div>
 
       <hr class="h-px my-8 bg-gray-300 border-0 dark:bg-gray-700">
@@ -187,9 +187,9 @@ changeLanguage("en");
 
       <!-- Contêiner para botões usando grid -->
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Vitória Liverpool', generateOdd('ex4')" class="px-3 py-1 bg-red-700 text-white rounded">Vitória Liverpool</button>
-        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Empate', generateOdd('ex5')" class="px-3 py-1 bg-gray-300 text-black rounded">Empate</button>
-        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Vitória Chelsea', generateOdd('ex6')" class="px-3 py-1 bg-blue-700 text-white rounded">Vitória Chelsea</button>
+        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Vitória Liverpool', generateOdd('ex4')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-red-700 text-white rounded">Vitória Liverpool</button>
+        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Empate', generateOdd('ex5')" class="px-3 py-1 bg-gray-300 hover:bg-gray-800 hover:text-white text-black rounded">Empate</button>
+        <button @click="boletimMessage = 'Liverpool vs Chelsea', boletimMessage2 = 'Vitória Chelsea', generateOdd('ex6')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-blue-700 text-white rounded">Vitória Chelsea</button>
       </div>
       <hr class="h-px my-8 bg-gray-300 border-0 dark:bg-gray-700">
       <div class="flex justify-between items-center mb-2 dark:text-invert">
@@ -731,8 +731,8 @@ changeLanguage("en");
                 <!-- Contêiner para botões usando grid -->
                 <div class="grid grid-cols-3 gap-4 mb-4">
                   <button @click="boletimMessage = 'G2 Esports - Fnatic', boletimMessage2 = 'Vitória G2 Esports', generateOdd('ex303')" class="px-3 py-1 bg-gray-500 text-white rounded">Vitória G2 Esports</button>
-                  <button @click="boletimMessage = 'G2 Esports - Fnatic', boletimMessage2 = 'Empate', generateOdd('ex304')" class="px-3 py-1 bg-gray-300 text-black rounded">Empate</button>
-                  <button @click="boletimMessage = 'G2 Esports - Fnatic', boletimMessage2 = 'Vitória Fnatic', generateOdd('ex305')" class="px-3 py-1  bg-orange-500 text-black rounded">Vitória Fnatic</button>
+                  <button @click="boletimMessage = 'G2 Esports - Fnatic', boletimMessage2 = 'Empate', generateOdd('ex304')" class="px-3 py-1 bg-gray-300 hover:bg-gray-800 hover:text-white text-black rounded">Empate</button>
+                  <button @click="boletimMessage = 'G2 Esports - Fnatic', boletimMessage2 = 'Vitória Fnatic', generateOdd('ex305')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-orange-500 text-black rounded">Vitória Fnatic</button>
                 </div>
                 <hr class="my-8 bg-gray-400 border-0 h-1"> 
                 <h4 class="mb-4 text-2xl font-bold dark:text-white">Rocket League:</h4>
