--- a/src/pages/favoritos2.astro
+++ b/src/pages/favoritos2.astro
@@ -45,12 +45,12 @@ let contacts = [
           
           <div x-data="{ selectedTeam: '', showConfirmation: false }" class="flex justify-center w-full">
               <!-- Botão principal para abrir o dropdown -->
-              <button id="multiLevelDropdownButton" data-dropdown-toggle="multi-dropdown" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-large rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-                  Adicionar Favorito
-                  <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                  </svg>
-              </button>
+              <button id="multiLevelDropdownButton" data-dropdown-toggle="multi-dropdown" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-xl rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 -ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+                </svg>
+                Adicionar Favorito
+            </button>
 
               <!-- Dropdown menu -->
               <div id="multi-dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
@@ -127,7 +127,7 @@ let contacts = [
         
             <!-- Contêiner para botões usando grid -->
             <div class="grid grid-cols-3 gap-4 mb-4">
-              <button @click="boletimMessage = 'FC Vizela vs CF Estrela da Amadora', boletimMessage2 = 'Vitória FC Vizela', generateOdd('ex18')" class="px-3 py-1 bg-blue-600 text-white rounded">Vitória FC Vizela</button>
+              <button @click="boletimMessage = 'FC Vizela vs CF Estrela da Amadora', boletimMessage2 = 'Vitória FC Vizela', generateOdd('ex18')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-blue-600 text-white rounded">Vitória FC Vizela</button>
               <button @click="boletimMessage = 'FC Vizela vs CF Estrela da Amadora', boletimMessage2 = 'Empate', generateOdd('ex19')" class="px-3 py-1 bg-gray-300 text-black rounded">Empate</button>
               <button @click="boletimMessage = 'FC Vizela vs CF Estrela da Amadora', boletimMessage2 = 'Vitória CF Estrela da Amadora', generateOdd('ex20')" class="px-3 py-1  bg-green-500 rounded">Vitória CF Estrela da Amadora</button>
             </div>
@@ -148,11 +148,24 @@ let contacts = [
               <button @click="boletimMessage = 'Alemanha - Eslováquia', boletimMessage2 = 'Empate', generateOdd('ex301')" class="px-3 py-1 bg-gray-300 text-black rounded">Empate</button>
               <button @click="boletimMessage = 'Alemanha - Eslováquia', boletimMessage2 = 'Vitória Eslováquia', generateOdd('ex302')" class="px-3 py-1 bg-blue-800 text-white rounded">Vitória Eslováquia</button>
             </div>
-            
+
             <hr class="my-8 bg-gray-400 border-0 h-1">
             <!-- Mais jogos ... -->
-            <h4 class="mb-4 text-xl font-bold text-black">Futebol: Chelsea</h4>
-            <h4 class="mb-4 text-l text-center text-black font-bold dark:text-white">Esta equipa não tem jogos previstos</h4>
+            <h4 class="mb-4 text-xl font-bold dark:text-white">Basquetebol: Chicago Bulls</h4>
+
+            <div class="flex justify-between items-center mb-4 dark:text-invert">
+              <span>EUA: NBA - <b>Chicago Bulls vs Minnesota TimberWolves</b></span>
+              <span>Dia 25/5 às 1h30
+              </span>
+            </div>
+        
+            <!-- Contêiner para botões usando grid -->
+            <div class="grid grid-cols-2 gap-4">
+              <button @click="boletimMessage = 'Chicago Bulls vs Minnesota TimberWolves', boletimMessage2 = 'Vitória Chicago Bulls', generateOdd('ex32')" class="px-3 py-1 hover:bg-gray-800 hover:text-white bg-red-800 text-white rounded">Vitória Chicago Bulls</button>
+              <button @click="boletimMessage = 'Chicago Bulls vs Minnesota TimberWolves', boletimMessage2 = 'Vitória Minnesota TimberWolves', generateOdd('ex33')"class="px-3 py-1 bg-blue-900 text-white rounded ">Vitória Minnesota TimberWolves</button>
+            </div>
+            
+            
 
 
 
