--- a/src/pages/perfil.astro
+++ b/src/pages/perfil.astro
@@ -57,8 +57,8 @@ let contacts = [
         phone: '912345678' 
     }
 }">
-    <div class="mt-20 flex items-center justify-center">
-        <div class="bg-white rounded-lg p-8 w-full max-w-4xl flex">
+    <div class="mt-20 flex items-center justify-center dark:bg-invert">
+        <div class="bg-white dark:bg-black dark:text-white rounded-lg p-8 w-full max-w-4xl flex">
             <div class="flex-1 flex flex-col items-center text-center">
                 <div class="bg-gray-400 rounded-full h-24 w-24 flex items-center justify-center mb-4">
                     <span class="text-xl font-medium text-white">João</span>
@@ -98,10 +98,10 @@ let contacts = [
     </div>
 
     <!-- levantar Modal -->
-    <div x-show="showWithdrawalModal" class="fixed inset-0 bg-gray-500 bg-opacity-75 flex items-center justify-center p-4">
-        <div class="bg-white p-4 rounded-lg">
+    <div x-show="showWithdrawalModal" class="fixed inset-0 bg-gray-600 bg-opacity-75 flex items-center justify-center p-4">
+        <div class="bg-white dark:bg-gray-600 p-4 rounded-lg">
             <div class="flex justify-center space-x-4 mb-4">
-                <button @click="paymentMethod='mbway'" :class="{'bg-blue-500': paymentMethod === 'mbway'}" class="flex flex-col items-center p-2 rounded shadow">
+                <button @click="paymentMethod='mbway'" :class="{'bg-blue-500': paymentMethod === 'mbway'}" class="flex flex-col  items-center p-2 rounded shadow">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Logo_MBWay.svg/2560px-Logo_MBWay.svg.png" alt="MBWAY" class="h-8 w-13">
                     MBWay
                 </button>
@@ -109,12 +109,12 @@ let contacts = [
                     <img src="https://cdn.pixabay.com/photo/2015/05/26/09/37/paypal-784404_1280.png" alt="PayPal" class="h-8 w-13">
                     PayPal
                 </button>
-                <button @click="paymentMethod='googlepay'" :class="{'bg-blue-500': paymentMethod === 'googlepay'}" class="flex flex-col items-center p-2 rounded shadow">
+                <button @click="paymentMethod='googlepay'" :class="{'bg-blue-500': paymentMethod === 'googlepay'}" class="flex flex-col  items-center p-2 rounded shadow">
                     <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/GooglePayLogo.width-500.format-webp.webp" alt="Google Pay" class="h-8 w-13">
                     GooglePay
                 </button>
             </div>
-            <p class="text-lg text-center mb-4">Insira o montante que deseja levantar:</p>
+            <p class="text-lg dark:text-white text-center mb-4">Insira o montante que deseja levantar:</p>
             <input type="number" x-model.number="transactionAmount" class="border p-2 rounded w-full" placeholder="Montante em €"/>
             <div class="mt-4 flex justify-center gap-2">
                 <button @click="showFinalConfirmation = true" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Confirmar</button>
@@ -124,9 +124,9 @@ let contacts = [
     </div>
 
     <!-- Final confirmação levantar  Modal -->
-    <div x-show="showFinalConfirmation" class="fixed inset-0 bg-gray-500 bg-opacity-75 flex items-center justify-center p-4">
-        <div class="bg-white p-4 rounded-lg">
-            <p class="text-lg mb-4">Tem certeza que deseja levantar esta quantia?</p>
+    <div x-show="showFinalConfirmation" class="fixed inset-0  bg-gray-500 bg-opacity-75 flex items-center justify-center p-4">
+        <div class="bg-white dark:bg-gray-600 p-4 rounded-lg">
+            <p class="text-lg dark:text-white mb-4">Tem certeza que deseja levantar esta quantia?</p>
             <div class="flex justify-center gap-2">
                 <button @click="if (transactionAmount <= walletBalance && transactionAmount > 0) { walletBalance -= transactionAmount; showFinalConfirmation = false; } showWithdrawalModal = false;" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Sim</button>
                 <button @click="showFinalConfirmation = false" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Não</button>
@@ -177,7 +177,7 @@ let contacts = [
         
            
 
-            <div x-show="showEditModal" class="fixed inset-0 bg-gray-500 bg-opacity-75 flex items-center justify-center p-4">
+            <div x-show="showEditModal" class="fixed inset-0 bg-gray-900 bg-opacity-90 flex items-center justify-center p-4">
                 <div class="bg-white p-4 rounded-lg">
                     <div class="mb-4">
                         <label class="block text-lg">Nome:</label>
